# cpp-advanced-hse

./: .clang-tidy  .deadlines.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .grader-ci.yml  .releaser-ci.yml  CMakeLists.txt  README.md  SETUP.md  build.docker  reflection_gen.py  run_linter.sh  submit.py  testenv.docker
tasks/: CMakeLists.txt
tasks/algo_spec/: .tester.json  CMakeLists.txt  algo_impl.h  algo_spec.h  readme.md  test.cpp  test.inc.in
tasks/any/: .tester.json  test.cpp
tasks/baby-threads/hash-table/: scorer.py
tasks/baby-threads/is-prime/: readme.md  scorer.py
tasks/baby-threads/subset-sum/: scorer.py
tasks/bad-hash/: .tester.json  main.cpp  readme.md
tasks/bind_front/: .tester.json  bind_front.h  readme.md  test.cpp
tasks/bonus/: CMakeLists.txt
tasks/bonus/bad-hash/: readme.md
tasks/bonus/bad-rand/: .tester.json  readme.md
tasks/bonus/clang-fun/: .tester.json  CMakeLists.txt  readme.md  run_tests.sh
tasks/bonus/executors/: README.md
tasks/bonus/functional-world/: .tester.json  CMakeLists.txt  functions.h  readme.md  test.cpp
tasks/bonus/hack-cpp/: .tester.json  CMakeLists.txt  polymorphism.h  test_call_private.cpp  test_polymorphism.cpp
tasks/bonus/hack-cpp-1.0/: CMakeLists.txt  readme.md  test_polymorphism.cpp
tasks/brainfuck/: .tester.json  CMakeLists.txt  brainfuck.h  impl.h  readme.md  test.cpp
tasks/brainfuck_compiler/: brainfuck_impl.h
tasks/buffered-channel/: .tester.json  buffered_channel.h  readme.md  scorer.py  test.cpp
tasks/compressed_pair/: .tester.json  compressed_pair.h  readme.md  test.cpp
tasks/concepts/: CMakeLists.txt  concepts.h  readme.md  test.cpp
tasks/condvars/buffered-channel/: scorer.py
tasks/condvars/rw-lock/: .tester.json  test.cpp
tasks/condvars/semaphore/: .tester.json  test.cpp
tasks/condvars/timerqueue/: .tester.json
tasks/condvars/unbuffered-channel/: scorer.py
tasks/coroutine/: .tester.json  CMakeLists.txt  readme.md  test.cpp
tasks/cow-vector/: .tester.json
tasks/curry/: curry.h  readme.md  test.cpp
tasks/defer/: readme.md
tasks/deque/: .tester.json
tasks/errors/: CMakeLists.txt
tasks/executors/: .tester.json  CMakeLists.txt  run.cpp  test_executors.cpp  test_future.cpp
tasks/executors/executors/: executors.cpp
tasks/gcd/: CMakeLists.txt
tasks/generator/: .tester.json  test.cpp
tasks/grep/: CMakeLists.txt
tasks/harakiri/: harakiri.h  readme.md
tasks/hash-table/: run.cpp  scorer.py  test.cpp
tasks/intro/: CMakeLists.txt
tasks/intro/multiplication/: readme.md
tasks/is-prime/: CMakeLists.txt  scorer.py
tasks/jpeg-decoder/: CMakeLists.txt  decoder.cpp  fft.cpp  huffman.cpp  huffman.h  readme.md
tasks/jpeg-decoder/baseline/: .tester.json  CMakeLists.txt  test_baseline.cpp
tasks/jpeg-decoder/faster/: .tester.json  CMakeLists.txt  test_faster.cpp
tasks/jpeg-decoder/fftw/: .tester.json  CMakeLists.txt  fuzz_fft.cpp  test_fft.cpp
tasks/jpeg-decoder/huffman/: .tester.json  CMakeLists.txt  fuzz_huffman.cpp  test_huffman.cpp
tasks/jpeg-decoder/include/: huffman.h
tasks/jpeg-decoder/progressive/: .tester.json  CMakeLists.txt  fft.cpp  huffman.cpp  test_progressive.cpp
tasks/jpeg-decoder/test_utils/: FuzzDataProvider.h
tasks/jpeg-decoder/utils/: init.h  libjpg_reader.h  log.h  png_encoder.h  test_commons.hpp
tasks/lambda_combiner/: test.cpp
tasks/lock-free/: CMakeLists.txt
tasks/lock-free/fast-queue/: .tester.json  scorer.py
tasks/lock-free/futex/: .tester.json  readme.md  scorer.py
tasks/lock-free/hazard-ptr/: CMakeLists.txt  README.md  scorer.py
tasks/lock-free/rw-spinlock/: .tester.json
tasks/lock-free/sync-map/: .tester.json  README.md
tasks/lru-cache/: lru_cache.cpp  lru_cache.h
tasks/memory/: CMakeLists.txt
tasks/memory/dedup/: dedup.h
tasks/memory/deque/: deque.h
tasks/memory/intrusive-list/: intrusive_list.h
tasks/memory/lru-cache/: lru_cache.cpp  lru_cache.h
tasks/memory/reallol/: readme.md
tasks/memory/string-view/: string_view.h
tasks/meta/: CMakeLists.txt
tasks/meta/compile-eval/: another_pow.h  hash.h  next_prime.h  pow.h  readme.md  sqrt.h
tasks/meta/constexpr-map/: constexpr_map.h  sort.h
tasks/meta/function-ref/: CMakeLists.txt  test.cpp
tasks/move/compressed-pair/: compressed_pair.h
tasks/move/cow-vector/: cow_vector.cpp  cow_vector.h
tasks/move/harakiri/: harakiri.h
tasks/move/reallol/: main.cpp
tasks/move/rule-of-5/: main.cpp
tasks/move/string-operations/: readme.md
tasks/mpsc-queue/: .tester.json  CMakeLists.txt  README.md  mpsc_queue.h  mpsc_queue_bench.cpp  mpsc_queue_test.cpp
tasks/multiplication/: readme.md
tasks/pipes/: .tester.json  CMakeLists.txt  pipes.h  readme.md  test.cpp
tasks/reallol/: CMakeLists.txt  main.cpp  readme.md
tasks/reduce/: commons.h  run.cpp  test.cpp
tasks/reflection/: CMakeLists.txt  readme.md  reflection.h  schema.h  test.cpp
tasks/rule-of-5/: CMakeLists.txt  main.cpp  readme.md
tasks/rw-lock/: .tester.json  test.cpp
tasks/safe-transform/: test.cpp
tasks/scheme/: CMakeLists.txt  README.md  parser.h  readme.md  tokenizer.h
tasks/scheme/advanced/: .tester.json  CMakeLists.txt  README.md  sources.cmake  test_lambda.cpp  test_pair_mut.cpp  test_symbol.cpp
tasks/scheme/basic/: .tester.json  CMakeLists.txt  README.md  object.h  sources.cmake  test_boolean.cpp  test_eval.cpp  test_fuzzer.cpp  (+2 more)
tasks/semaphore/: .tester.json  readme.md  test.cpp
tasks/simple_defer/: test.cpp
tasks/smart-ptrs/: CMakeLists.txt  readme.md  shared.h  shared_ptr.h  sw_fwd.h  unique.h  unique_ptr.h  weak_ptr.h
tasks/solve_or_die/: .tester.json  CMakeLists.txt  readme.md  status.h  status_builder.h  statusor.h  statusor_internal.h
tasks/stdflib/: CMakeLists.txt  stdflib.h  test.cpp
tasks/string-operations/: .tester.json  CMakeLists.txt  readme.md  string_operations.h  string_operations_test.cpp
tasks/string-view/: .tester.json
tasks/subset-sum/: CMakeLists.txt  scorer.py
tasks/timerqueue/: timerqueue_test.cpp
tasks/transform_tuple/: test.cpp
tasks/unassigned/: CMakeLists.txt
tasks/unbuffered-channel/: scorer.py  unbuffered_channel.h
(+277 files in other folders)
