add_subdirectory(list)

# 9
add_subdirectory(timerqueue)
add_subdirectory(semaphore)
add_subdirectory(rw-lock)
add_subdirectory(buffered-channel)
add_subdirectory(unbuffered-channel)

# 10
add_subdirectory(futex)
add_subdirectory(mpsc-stack)
add_subdirectory(fast-queue)
add_subdirectory(rw-spinlock)

# 11
# add_subdirectory(coroutine)
# add_subdirectory(generator)

# Bonuses
add_subdirectory(executors)
